--- a/server/.env.example
+++ b/server/.env.example
@@ -1,16 +1,16 @@
 # for docker-compose
-# POSTGRES_NAME = "postgres"
-# POSTGRES_USER = "postgres"
-# POSTGRES_PASSWORD = "postgres"
-# POSTGRES_HOST = "pgvector"
-# POSTGRES_PORT = 5432
-
-# without docker-compose
 POSTGRES_NAME = "postgres"
 POSTGRES_USER = "postgres"
 POSTGRES_PASSWORD = "postgres"
-POSTGRES_HOST = "localhost"
-POSTGRES_PORT = 5433
+POSTGRES_HOST = "pgvector"
+POSTGRES_PORT = 5432
+
+# without docker-compose
+# POSTGRES_NAME = "postgres"
+# POSTGRES_USER = "postgres"
+# POSTGRES_PASSWORD = "postgres"
+# POSTGRES_HOST = "localhost"
+# POSTGRES_PORT = 5433
 
 
 OPENAI_API_KEY = "your-openai-key"
