--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "markdown": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-markdown": "^9.0.3"
   },
   "devDependencies": {
