--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,27 +2,36 @@ annotated-types==0.7.0
 anyio==4.8.0
 asgiref==3.8.1
 certifi==2024.12.14
+charset-normalizer==3.4.1
 distro==1.9.0
 django==5.1.5
 django-cors-headers==4.6.0
+enchant==0.0.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.2
+language-tool-python==2.8.2
 numpy==2.2.2
 openai==1.60.2
 pandas==2.2.3
 pgvector==0.3.6
+pip==25.0
 psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic-core==2.27.2
+pyenchant==3.2.2
+pyspellchecker==0.8.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
 tqdm==4.67.1
 typing-extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
+wheel==0.45.1
